; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/cio/extr_airq.c_s390_unregister_adapter_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/cio/extr_airq.c_s390_unregister_adapter_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64* }
%struct.airq_t = type { i32 }

@indicators = common dso_local global %struct.TYPE_2__* null, align 8
@.str = private unnamed_addr constant [10 x i8] c"urairq:%d\00", align 1
@airqs = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @s390_unregister_adapter_interrupt(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.airq_t*, align 8
  %6 = alloca [16 x i8], align 16
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = ptrtoint i8* %8 to i32
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @indicators, align 8
  %11 = load i64, i64* %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64*, i64** %13, align 8
  %15 = getelementptr inbounds i64, i64* %14, i64 0
  %16 = ptrtoint i64* %15 to i32
  %17 = sub nsw i32 %9, %16
  store i32 %17, i32* %7, align 4
  %18 = getelementptr inbounds [16 x i8], [16 x i8]* %6, i64 0, i64 0
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @snprintf(i8* %18, i32 16, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = getelementptr inbounds [16 x i8], [16 x i8]* %6, i64 0, i64 0
  %22 = call i32 @CIO_TRACE_EVENT(i32 4, i8* %21)
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** @indicators, align 8
  %24 = load i64, i64* %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i64*, i64** %26, align 8
  %28 = load i32, i32* %7, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i64, i64* %27, i64 %29
  store i64 0, i64* %30, align 8
  %31 = load i32**, i32*** @airqs, align 8
  %32 = load i64, i64* %4, align 8
  %33 = getelementptr inbounds i32*, i32** %31, i64 %32
  %34 = load i32*, i32** %33, align 8
  %35 = load i32, i32* %7, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %34, i64 %36
  %38 = call %struct.airq_t* @xchg(i32* %37, i32* null)
  store %struct.airq_t* %38, %struct.airq_t** %5, align 8
  %39 = call i32 (...) @synchronize_sched()
  %40 = load %struct.airq_t*, %struct.airq_t** %5, align 8
  %41 = call i32 @kfree(%struct.airq_t* %40)
  ret void
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @CIO_TRACE_EVENT(i32, i8*) #1

declare dso_local %struct.airq_t* @xchg(i32*, i32*) #1

declare dso_local i32 @synchronize_sched(...) #1

declare dso_local i32 @kfree(%struct.airq_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
